--- a/jmx_prometheus_httpserver/pom.xml
+++ b/jmx_prometheus_httpserver/pom.xml
@@ -7,7 +7,6 @@
     <version>0.10-SNAPSHOT</version>
   </parent>
 
-  <groupId>io.prometheus.jmx</groupId>
   <artifactId>jmx_prometheus_httpserver</artifactId>
   <description>
     See https://github.com/prometheus/jmx_exporter/blob/master/README.md
@@ -26,9 +25,9 @@
       <version>0.0.21</version>
     </dependency>
     <dependency>
-      <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-servlet</artifactId>
-      <version>8.1.7.v20120910</version>
+      <groupId>io.prometheus</groupId>
+      <artifactId>simpleclient_httpserver</artifactId>
+      <version>0.0.9-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
